# pvector

./: README.md  cabal.project  flake.nix  persistent-vector2.cabal  pvector.cabal
.github/workflows/: haskell-ci.yml
bench/: Main.hs
src/Data/Vector/: Persistent.hs
src/Data/Vector/Persistent/: Internal.hs  Lazy.hs  Strict.hs  Unsafe.hs
src/Data/Vector/Persistent/Internal/: Array.hs  Buffer.hs  Bundle.hs  CoercibleUtils.hs  PrimRef.hs  RAList.hs  Strict.hs
src/Data/Vector/Persistent/Internal/Array/: Unsafe.hs
src/Data/Vector/Persistent/Internal/Buffer/: Large.hs  Mutable.hs  Small.hs
src/Data/Vector/Persistent/Strict/: Internal.hs
test/: Arbitrary.hs  Main.hs  PersistentVectorSpec.hs  Properties.hs
